--- a/.github/workflows/lewton.yml
+++ b/.github/workflows/lewton.yml
@@ -7,8 +7,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
-        toolchain: [stable, 1.20.0]
+        os: [macOS-latest]
+        toolchain: [stable]
 
     runs-on: ${{ matrix.os }}
 
