--- a/.github/workflows/lewton.yml
+++ b/.github/workflows/lewton.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+    - name: Install libvorbis
+      run: brew install libvorbis
     - name: Install Rust
       if: matrix.os != 'macOS-latest' || matrix.toolchain != '1.20.0'
       uses: actions-rs/toolchain@v1
