Try to fix tests

--- a/.github/workflows/lewton.yml
+++ b/.github/workflows/lewton.yml
@@ -6,6 +6,7 @@ jobs:
   build:
 
     strategy:
+      fail-fast: false
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
         toolchain: [stable, 1.20.0]
