--- a/dev/cmp/Cargo.toml
+++ b/dev/cmp/Cargo.toml
@@ -6,5 +6,5 @@ authors = ["est31 <MTest31@outlook.com>"]
 
 [dependencies]
 lewton = { path = "../../" }
-vorbis = "0.1"
+vorbis = { git = "https://github.com/Luni-4/vorbis-rs" }
 test-assets = "0.2"
